[gd_scene load_steps=7 format=2]

[ext_resource path="res://material_maker/widgets/node_editor/node_editor.gd" type="Script" id=1]
[ext_resource path="res://material_maker/widgets/node_editor/node_editor_item_list.gd" type="Script" id=2]
[ext_resource path="res://material_maker/icons/icons.svg" type="Texture" id=3]



[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://material_maker/fonts/hack.ttf"

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = SubResource( 2 )

[node name="NodeEditor" type="WindowDialog"]
margin_right = 896.0
margin_bottom = 398.0
popup_exclusive = true
window_title = "Node Editor"
script = ExtResource( 1 )

[node name="Sizer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Tabs" type="TabContainer" parent="Sizer"]
margin_right = 896.0
margin_bottom = 374.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0

[node name="General" type="VBoxContainer" parent="Sizer/Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Name" type="HBoxContainer" parent="Sizer/Tabs/General"]
margin_right = 888.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="LabelName" type="Label" parent="Sizer/Tabs/General/Name"]
margin_top = 5.0
margin_right = 42.0
margin_bottom = 19.0
text = "Name:"

[node name="Name" type="LineEdit" parent="Sizer/Tabs/General/Name"]
margin_left = 46.0
margin_right = 888.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="LabelParameters" type="Label" parent="Sizer/Tabs/General"]
margin_top = 28.0
margin_right = 888.0
margin_bottom = 42.0
text = "Parameters:"

[node name="Parameters" type="ScrollContainer" parent="Sizer/Tabs/General"]
margin_top = 46.0
margin_right = 888.0
margin_bottom = 181.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="Sizer" type="VBoxContainer" parent="Sizer/Tabs/General/Parameters"]
margin_right = 888.0
margin_bottom = 22.0
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="AddParameter" type="Button" parent="Sizer/Tabs/General/Parameters/Sizer"]
margin_right = 28.0
margin_bottom = 22.0
size_flags_horizontal = 0
icon = SubResource( 1 )
flat = true

[node name="LabelInputs" type="Label" parent="Sizer/Tabs/General"]
margin_top = 185.0
margin_right = 888.0
margin_bottom = 199.0
text = "Inputs:"

[node name="Inputs" type="ScrollContainer" parent="Sizer/Tabs/General"]
margin_top = 203.0
margin_right = 888.0
margin_bottom = 338.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="Sizer" type="VBoxContainer" parent="Sizer/Tabs/General/Inputs"]
margin_right = 888.0
margin_bottom = 22.0
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="AddInput" type="Button" parent="Sizer/Tabs/General/Inputs/Sizer"]
margin_right = 28.0
margin_bottom = 22.0
size_flags_horizontal = 0
icon = SubResource( 1 )
flat = true

[node name="Outputs" type="VBoxContainer" parent="Sizer/Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="LabelOutputs" type="Label" parent="Sizer/Tabs/Outputs"]
margin_right = 825.0
margin_bottom = 14.0
text = "Outputs:"

[node name="Outputs" type="ScrollContainer" parent="Sizer/Tabs/Outputs"]
margin_top = 18.0
margin_right = 825.0
margin_bottom = 338.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="Sizer" type="VBoxContainer" parent="Sizer/Tabs/Outputs/Outputs"]
margin_right = 825.0
margin_bottom = 22.0
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="AddOutput" type="Button" parent="Sizer/Tabs/Outputs/Outputs/Sizer"]
margin_right = 28.0
margin_bottom = 22.0
size_flags_horizontal = 0
icon = SubResource( 1 )
flat = true

[node name="Main Code" type="TextEdit" parent="Sizer/Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
mouse_default_cursor_shape = 0
custom_fonts/font = SubResource( 3 )
syntax_highlighting = true
show_line_numbers = true

[node name="Instance Functions" type="TextEdit" parent="Sizer/Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
mouse_default_cursor_shape = 0
custom_fonts/font = SubResource( 3 )
syntax_highlighting = true
show_line_numbers = true

[node name="Global Functions" type="TextEdit" parent="Sizer/Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
mouse_default_cursor_shape = 0
custom_fonts/font = SubResource( 3 )
custom_colors/brace_mismatch_color = Color( 1, 0, 0, 1 )
syntax_highlighting = true
show_line_numbers = true

[node name="HBoxContainer" type="HBoxContainer" parent="Sizer"]
margin_left = 339.0
margin_top = 378.0
margin_right = 557.0
margin_bottom = 398.0
size_flags_horizontal = 4

[node name="Apply" type="Button" parent="Sizer/HBoxContainer"]
margin_right = 70.0
margin_bottom = 20.0
rect_min_size = Vector2( 70, 0 )
text = "Apply"

[node name="OK" type="Button" parent="Sizer/HBoxContainer"]
margin_left = 74.0
margin_right = 144.0
margin_bottom = 20.0
rect_min_size = Vector2( 70, 0 )
text = "OK"

[node name="Cancel" type="Button" parent="Sizer/HBoxContainer"]
margin_left = 148.0
margin_right = 218.0
margin_bottom = 20.0
rect_min_size = Vector2( 70, 0 )
text = "Cancel"
[connection signal="pressed" from="Sizer/Tabs/General/Parameters/Sizer/AddParameter" to="." method="_on_AddParameter_pressed"]
[connection signal="pressed" from="Sizer/Tabs/General/Inputs/Sizer/AddInput" to="." method="_on_AddInput_pressed"]
[connection signal="pressed" from="Sizer/Tabs/Outputs/Outputs/Sizer/AddOutput" to="." method="_on_AddOutput_pressed"]
[connection signal="pressed" from="Sizer/HBoxContainer/Apply" to="." method="_on_Apply_pressed"]
[connection signal="pressed" from="Sizer/HBoxContainer/OK" to="." method="_on_OK_pressed"]
[connection signal="pressed" from="Sizer/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
